--- a/Capitulo_1/Introdução/1.3.md
+++ b/Capitulo_1/Introdução/1.3.md
@@ -75,4 +75,34 @@ um programa instalado no servidor web (Apache, IIS) e retornam para a máquina
 do cliente apenas o código resultante dessa execução. PHP, ASP, Java, C#, Python  
 e também JavaScript são exemplos de linguagens que rodam no lado do servidor.
 
+Este livro não pretende ser uma referência sobre JavaScript, mas utilizar os
+recursos da linguagem para ensino de lógica de Programação. Na prática, ao  
+finalizar a leitura e desenvolver os exemplos construídos ao longo dos capítulos,  
+você estará apto a implementar os próprios programas JavaScript e explorar os  
+demais recursos da linguagem. Para um aprofundamento maior na linguagem 
+JavaScript e explorar os demais recursos da linguagem. Para um aprofundamento  
+maior na linguagem JavaScript, recomendo os livros *JavaScript --- Guia do  
+Programador*, de Maurício Samy Silva, e *Aprendendo JavaScript*, de Shelley  
+Powers --- da editora Novatec.
 
+JavaScript também é uma linguagem orientada a objetos. Esse paradigma de  
+programação é essencial para o desenvolvimento de aplicações profissionais já  
+há algum tempo. O objetivo deste livro é explicar os passos iniciais para  
+você se tornar um programador de computadores. Esteja ciente de que vários  
+outros passos ainda precisam ser dados para você se tornar um profissional  
+completo. A fim de avançar nos estudos em programação, deixo a sugestão dos  
+livros *Princípios de Orientação a Objetos em JavaScript*, de 
+Nicholas C. Zakas, e *Estruturas de dados e algoritmos em JavaScript*, de 
+Loiane Groner --- ambos publicados pela Novatec.
+
+Entendo que o aprendizado de Algoritmos se dá na sua essência pela prática  
+de exercícios de programação. Por isso, este livro foca nos exemplos e  
+exercícios. Espero que o leitor acompanhe a explicação dos exemplos e crie os  
+códigos de cada exemplo. Também é possivel baixar os exemplos no site da editora  
+Novatec. Nos exercícios, dedique um tempo para criar cada programa. Mesmo que  
+pareçam simples, eles são fundamentais para o processo de aprendizagem. Em  
+programas maiores, dominar esses recursos simples, como criar condições ou  
+repetições, por exemplo, serão fundamentais para que você consiga resolver o  
+problema da maneira correta. No site da editora, estão disponíveis os programas  
+como uma forma de resolução para cada exercício proposto (visto que, no geral,
+existem várias formas de se resolver um algoritmo).
