--- a/Capitulo_1/Introdução/1.4 Editores de código JavaScript.md
+++ b/Capitulo_1/Introdução/1.4 Editores de código JavaScript.md
@@ -1,10 +1,31 @@
 ### Editores de código JavaScript
 
-Para criar programas JavaScript , podemos utilizar editores simples que já estão  instalados no computador, editores online disponíveis na internet ou instalar pro-gramas profissionais de edição de código. Editores simples, como o bloco de notas  no Windows, não são muito recomendados pela ausência de recursos de auxílio ao  programador. Os editores online contêm alguns recursos extras e a vantagem de poder acessar e compartilhar os códigos na internet. Já os editores profissionais contêm diversos recursos que facilitam o desenvolvimento dos programas.
+Para criar programas JavaScript , podemos utilizar editores simples que já estão  
+instalados no computador, editores online disponíveis na internet ou instalar 
+pro-gramas profissionais de edição de código. Editores simples, como o bloco de 
+notas  no Windows, não são muito recomendados pela ausência de recursos de auxílio 
+ao  programador. Os editores online contêm alguns recursos extras e a vantagem 
+de poder acessar e compartilhar os códigos na internet. Já os editores profissionais 
+contêm diversos recursos que facilitam o desenvolvimento dos programas.
 
-Os editores online possibilitam testar diretamente os programas em um navegador web. São exemplos dessa classe de editores JavaScript os sites **w3schools.com** - da companhia Refsnes Data, há uma descrição dos recursos da linguagem e de seus comandos (em inglês). Nos exemplos apresentados, há o botão **Try it YourSelf** (tente você mesmo), que permite a visualização e a alteração do código. Ao clicar no botão **Run**, você pode verificar o que cada alteração implica no resultado do programa. A imagem a baixo apresenta um exemplo de tela do site da **w3schools.com**. No quadro da esquerda, está o código HTML/JavaScript que pode ser editado e, no quadro da direita, o resultado da execução do programa.
+Os editores online possibilitam testar diretamente os programas em um navegador 
+web. São exemplos dessa classe de editores JavaScript os sites **w3schools.com** 
+- da companhia Refsnes Data, há uma descrição dos recursos da linguagem e de seus 
+comandos (em inglês). Nos exemplos apresentados, há o botão **Try it YourSelf** 
+(tente você mesmo), que permite a visualização e a alteração do código. Ao clicar 
+no botão **Run**, você pode verificar o que cada alteração implica no resultado 
+o programa. A imagem a baixo apresenta um exemplo de tela do site da 
+**w3schools.com**. No quadro da esquerda, está o código HTML/JavaScript que pode 
+ser editado e, no quadro da direita, o resultado da execução do programa.
 
 ![[2024-06-08_11-08.avif]]
 
-Já os editores profissionais apresentam uma série de recursos que nos auxiliam no desenvolvimento de aplicações. Autocompletar os comandos (intelliSense), alertas de erros de sintaxe, formatação(indentação) de código, cores diferentes para os comandos e integração com GitHub são alguns exemplos. E o melhor, há versões gratuitas de ótimos editores de código disponíveis na internet, como Visual Studio Code, Netbeans IDE e Sublime --- que são multiplataforma (ou seja, possuem versões para Windows, Mac e Linux). Sugiro que você baixe e instale o Visual Studio Code.
+Já os editores profissionais apresentam uma série de recursos que nos auxiliam no 
+desenvolvimento de aplicações. Autocompletar os comandos (intelliSense), alertas 
+de erros de sintaxe, formatação(indentação) de código, cores diferentes para os 
+comandos e integração com GitHub são alguns exemplos. E o melhor, há versões 
+gratuitas de ótimos editores de código disponíveis na internet, como 
+Visual Studio Code, Netbeans IDE e Sublime --- que são multiplataforma (ou seja, 
+possuem versões para Windows, Mac e Linux). Sugiro que você baixe e instale o 
+Visual Studio Code.
 
