--- a/Capitulo_1/Introdução/1.6 Variáveis e constantes.md
+++ b/Capitulo_1/Introdução/1.6 Variáveis e constantes.md
@@ -1,12 +1,61 @@
 ### Variáveis e constantes
 
-Uma da principais funções de um programa é interagir com os usuários. Uma das formas de realizar essa interação é pela solicitação de informações e, a partir dessas informações, implementar ações e apresentar respostas. Imagine um terminal de caixa eletrônico que possibilite saques de apenas 100 reais. Pouco útil, já que os clientes do banco que possuem saldo inferior a 100 reais não poderiam utilizá-lo e aqueles que precisam de 500 reais, por exemplo, teriam de realizar 5 vezes a mesma operação. Haveria ainda aqueles que precisam de um valor não múltiplo de 100. Ou sejá , o melhor é solicitar ao cliente o valor a ser sacado. Para isso é que existem as variáveis.
+Uma da principais funções de um programa é interagir com os usuários. Uma das 
+formas de realizar essa interação é pela solicitação de informações e, a partir 
+dessas informações, implementar ações e apresentar respostas. Imagine um terminal 
+de caixa eletrônico que possibilite saques de apenas 100 reais. Pouco útil, já 
+que os clientes do banco que possuem saldo inferior a 100 reais não poderiam 
+utilizá-lo e aqueles que precisam de 500 reais, por exemplo, teriam de realizar 
+5 vezes a mesma operação. Haveria ainda aqueles que precisam de um valor não 
+múltiplo de 100. Ou sejá , o melhor é solicitar ao cliente o valor a ser sacado. 
+Para isso é que existem as variáveis.
 
-As variáveis são espaços alocados na memória do computador que permitem guardar informações e trabalhar com elas --- como o valor que  o cliente deseja sacar no terminal do caixa eletrônico. Como o nome sugere, os valores armazenados em um variável podem ser alterados durante a execução do program. São exemplos de variáveis manipuladas em um programa: a descrição, a quantidade e o preço de um produto ou, então, o nome, o salário e a altura de uma pessoa.
+As variáveis são espaços alocados na memória do computador que permitem guardar 
+informações e trabalhar com elas --- como o valor que  o cliente deseja sacar no 
+terminal do caixa eletrônico. Como o nome sugere, os valores armazenados em um 
+variável podem ser alterados durante a execução do program. São exemplos de 
+variáveis manipuladas em um programa: a descrição, a quantidade e o preço de um 
+produto ou, então, o nome, o salário e a altura de uma pessoa.
 
-As variáveis declaradas em um programa devem possuir um nome, seguindo algumas regras de nomenclatura. Em JavaScript, os nomes de variáveis não podem:
+As variáveis declaradas em um programa devem possuir um nome, seguindo algumas 
+regras de nomenclatura. Em JavaScript, os nomes de variáveis não podem:
 
 - Conter espaços.
 - Começar por números.
 - Conter caracteres especiais, como +,-,*,/,%,(),{},!,@,#.
-- Utilizar nomes de palavras reservadas da linguagem, como function, var, new, for ou return.
+- Utilizar nomes de palavras reservadas da linguagem, como function, var, new, 
+for ou return.
+
+Variáveis escritas com letras maiúsculas são diferentes de variáveis escritas 
+com letras minúsculas. O uso do caractere "_" é válido, porém dê preferência para
+declarar variáveis com o nome em letras minúsculas e o uso de uma letra maiúsculas
+para destacar palavras compostas (padrão denominado *camelcase*). São exemplos
+de nomes válidos de variáveis: **cidade, nota1, primeiroCliente, novoSalario, 
+precoFinal, dataVenda**. Procure usar nome que indicam o conteúdo que a variável
+vai armazenar.
+
+Para declarar uma variável em JavaScript, podemos utilizar os comandos **var, let
+ou const**. Nas últimas versões do JavaScript, passou-se a recomendar o uso de 
+**const** ou **let**. Uma variável criada a partir de um desses comandos possui 
+um escopo local (de bloco), o que pode evitar desperdício de memória --- pois,
+ao final do bloco, a variável deixa de existir. Além disso, **const** e **let**
+impedem que um programa rode com alguns problemas no código, como declarar duas
+variáveis com o mesmo nome no script.
+
+Para fazer com que uma variável receba um dado, utiliza-se o conceito de atribuição.
+Em JavaScript, a atribuição de valor para uma varável é feita com o sinal "=". É
+possível declarar uma variável e atribuir-lhe diretamente um valor com o uso da 
+palavra reservada **const (ou let)** e do sinal de atribuição da seguinte forma:
+
+`const idade = 18`
+
+Em algumas linguagens, o uso de constantes é restrito apenas à declaração de 
+variáveis de controle ou de configuração do sistema, como o número máximo de 
+alunos a serem manipulados pelo programa ou os dados de conexão com um banco de 
+dados.
+
+No JavaScript moderno, o uso de **const** passou a ter um novo significado e tem
+se tornado o padrão da linguagem. Declarar uma variável com **const** serve para 
+indicar que essa variável de possuir uma única atribuição de valor e não será
+alterada no decorrer do programa. Então, caso o conteúdo da variável possa ser 
+alterado, declare-a com **let**. Em todos os demais casos, opte pelo **const**.
