--- a/Capitulo_1/Introdução/1.5 Saída de dados com alert() e console.log().md
+++ b/Capitulo_1/Introdução/1.5 Saída de dados com alert() e console.log().md
@@ -1,12 +1,33 @@
 ### Saída de dados com alert() e console.log()
 
-Pronto para realizar seus primeiros testes de programação? Antes de começarmos a digitar os códigos de alguns exemplos, vamos definir a estrutura das pastas em que os arquivos serão salvos. Recomendo que você crie uma pasta específica para os exemplos de livro, como "livrosjs" na raiz do disco C:. Dentro dessa pasta, crie uma nova pasta para cada capítulo. Iniciamos, portanto, pela criação da pasta "cap01". Dessa forma, nossos programas ficam organizados e fáceis de localizar. Para os nomes de programas, também vamos adotar um padrão: "ex1_1.html", "ex1_2.html" e assim sucessivamente para os exemplos da Capítulo 1. Já os arquivos contendo os exemplos de resposta dos exercícios finais de cada capítulo são salvos com o nome "resp1_a.html", "resp1_b.html" etc.
+Pronto para realizar seus primeiros testes de programação? Antes de começarmos a 
+digitar os códigos de alguns exemplos, vamos definir a estrutura das pastas em 
+que os arquivos serão salvos. Recomendo que você crie uma pasta específica para 
+os exemplos de livro, como "livrosjs" na raiz do disco C:. Dentro dessa pasta, 
+crie uma nova pasta para cada capítulo. Iniciamos, portanto, pela criação da 
+pasta "cap01". Dessa forma, nossos programas ficam organizados e fáceis de 
+localizar. Para os nomes de programas, também vamos adotar um padrão: 
+"ex1_1.html", "ex1_2.html" e assim sucessivamente para os exemplos da Capítulo 1. 
+Já os arquivos contendo os exemplos de resposta dos exercícios finais de cada 
+capítulo são salvos com o nome "resp1_a.html", "resp1_b.html" etc.
 
-Caso esteja utilizando um computador em que não gostaria de instalar o Visual Studio Code, você pode rodar os programas deste capítulo, acessando um dos sites de editores online destacados anteriormente. No Visual Studio Code, para que o editor disponibilize alguns auxílios que serão discutidos ao longo do livro, é necessário indicar o tipo de documento que está sendo criado. Isso pode ser feito a partir da barra de status do editor, Ao clicar sobre **Texto sem Formatação**, uma lista de tipos de arquivos é apresentada, conforme ilustra a Imagem abaixo. Nossos primeiros documentos devem ser tipo HTML. Outra forma de indicar o tipo do arquivo é salvá-lo logo no início da edição, selecionando o seu tipo. Faça isso e já salve o documento em branco com o nome "ex1_1.html" (dentro da pasta C:\livrosjs\cap01).
+Caso esteja utilizando um computador em que não gostaria de instalar o Visual 
+Studio Code, você pode rodar os programas deste capítulo, acessando um dos sites 
+de editores online destacados anteriormente. No Visual Studio Code, para que o 
+editor disponibilize alguns auxílios que serão discutidos ao longo do livro, é 
+necessário indicar o tipo de documento que está sendo criado. Isso pode ser feito 
+a partir da barra de status do editor, Ao clicar sobre **Texto sem Formatação**, 
+uma lista de tipos de arquivos é apresentada, conforme ilustra a Imagem abaixo. 
+Nossos primeiros documentos devem ser tipo HTML. Outra forma de indicar o tipo 
+do arquivo é salvá-lo logo no início da edição, selecionando o seu tipo. Faça 
+isso e já salve o documento em branco com o nome "ex1_1.html" (dentro da pasta 
+C:\livrosjs\cap01).
 
 ![[2024-06-08_11-53.avif]]
 
-Vamos então ao primeiro exemplo. Começamos com algo bem simples: apresentar uma mensagem ao usuário. Na tela em branco do Visual Studio Code, informe os seguintes comandos:
+Vamos então ao primeiro exemplo. Começamos com algo bem simples: apresentar uma 
+mensagem ao usuário. Na tela em branco do Visual Studio Code, informe os seguintes 
+comandos:
 
 #### Exemplo 1.1 - Saída de dados com alert(ex1_1.html)
 
@@ -17,16 +38,45 @@ Vamos então ao primeiro exemplo. Começamos com algo bem simples: apresentar um
 </script>
 ```
 
-Depois de salvar o arquivo, é necessário executá-lo, ou, no caso do JavaScript, renderizá-lo em um navegador. Para isso, abra o seu navegador favorito e na barra de endereços informe o caminho onde você salvou o arquivo `C:\livrojs\cap01\ex1_1.html`. Você também pode digitar apenas uma parte desse caminho e depois selecionar o arquivo. Outra opção é ir até a pasta em que a página foi salva, clicar com o botão direito do mouse sobre o arquivo, selecionar **Abrir com** e escolher um dos navegadores instalados no computador. Ao executar o programa, a mensagem que você escreveu dentro das aspas "Bem-Vindo ao Mundo JavaScript!" é exibida em uma caixa no centro da tela, conforme ilustra a imagem abaixo.
+Depois de salvar o arquivo, é necessário executá-lo, ou, no caso do JavaScript, 
+renderizá-lo em um navegador. Para isso, abra o seu navegador favorito e na barra 
+de endereços informe o caminho onde você salvou o arquivo `C:\livrojs\cap01\ex1_1.html`. 
+Você também pode digitar apenas uma parte desse caminho e depois selecionar o 
+arquivo. Outra opção é ir até a pasta em que a página foi salva, clicar com o botão 
+direito do mouse sobre o arquivo, selecionar **Abrir com** e escolher um dos 
+navegadores instalados no computador. Ao executar o programa, a mensagem que você 
+escreveu dentro das aspas "Bem-Vindo ao Mundo JavaScript!" é exibida em uma caixa 
+no centro da tela, conforme ilustra a imagem abaixo.
 
 ![[ex1_1.avif]]
 
-Para visualizar a saída gerada pelo comando `console.log()`, vocẽ deve procurar por **Ferramentas do Desenvolvedor** no seu browser e selecionar o item **console**. No Google Chrome, você pode obter o mesmo resultado ao pressionar a tecla **F12**. A imagem abaixo exibe a saída gerada pelo `console.log()`.
+Para visualizar a saída gerada pelo comando `console.log()`, vocẽ deve procurar 
+por **Ferramentas do Desenvolvedor** no seu browser e selecionar o item 
+**console**. No Google Chrome, você pode obter o mesmo resultado ao pressionar a 
+tecla **F12**. A imagem abaixo exibe a saída gerada pelo `console.log()`.
 
 ![[consoleLog.avif]]
 
-Certifique-se de ter digitado os comandos da mesma forma como no exemplo. As linguagens de programação são rígidas quanto à sintaxe dos comandos. Muitas delas, como o JavaScript, são *case sensitive*, ou seja, diferenciam letras maiúsculas de minúsculas. Se a caixa de alerta não foi exibida quando você mando abrir o arquivo no navegador, verifique cuidadosamente se os comandos digitados estão corretos. Após os ajustes, salve o arquivo e abra novamente a página no navegador (ou pressione **F5**).Você vai se acostumar a ser cuidadoso com a escrita do código com o passar do tempo. No Capítulo 5, será apresentada uma forma de localizar possíveis erros no código --- processo conhecido como depuração de programas.
+Certifique-se de ter digitado os comandos da mesma forma como no exemplo. As 
+linguagens de programação são rígidas quanto à sintaxe dos comandos. Muitas delas, 
+como o JavaScript, são *case sensitive*, ou seja, diferenciam letras maiúsculas 
+de minúsculas. Se a caixa de alerta não foi exibida quando você mando abrir o 
+arquivo no navegador, verifique cuidadosamente se os comandos digitados estão 
+corretos. Após os ajustes, salve o arquivo e abra novamente a página no navegador 
+(ou pressione **F5**).Você vai se acostumar a ser cuidadoso com a escrita do 
+código com o passar do tempo. No Capítulo 5, será apresentada uma forma de 
+localizar possíveis erros no código --- processo conhecido como depuração de 
+programas.
 
-Todos os exemplos e exercícios deste livro estão disponíveis para download no site da Editora Novatec. Recomendo que escreva o código exemplificado no livro. Caso aconteça algum problema, recorra ao código disponível no site da editora.
+Todos os exemplos e exercícios deste livro estão disponíveis para download no 
+site da Editora Novatec. Recomendo que escreva o código exemplificado no livro. 
+Caso aconteça algum problema, recorra ao código disponível no site da editora.
 
-Os programas deste capítulo são dedicados a apresentar os primeiros passos de programação. Por isso, utilizaremos o comando/método `alert()` para exibir mensagens em uma caixa no navegador. Este e os demais métodos JavaScript precisam estar delimitados por `<script> e </script>`. Nos segundo capítulo, vamos avançar um pouco mais e trabalhar as formas de integração do código JavaScript com HTML. Os termos comando, função, método ou procedimento podem ter pequenas diferenças quanto ao conceito, dependendo da linguagem. Por enquanto, entenda que eles são palavras-chaves da linguagem que servem para executar uma ação no programa.
+Os programas deste capítulo são dedicados a apresentar os primeiros passos de 
+programação. Por isso, utilizaremos o comando/método `alert()` para exibir 
+mensagens em uma caixa no navegador. Este e os demais métodos JavaScript precisam 
+estar delimitados por `<script> e </script>`. Nos segundo capítulo, vamos avançar 
+um pouco mais e trabalhar as formas de integração do código JavaScript com HTML. 
+Os termos comando, função, método ou procedimento podem ter pequenas diferenças 
+quanto ao conceito, dependendo da linguagem. Por enquanto, entenda que eles são 
+palavras-chaves da linguagem que servem para executar uma ação no programa.
