--- a/Capitulo_1/Introdução/1.6 Variáveis e constantes.md
+++ b/Capitulo_1/Introdução/1.6 Variáveis e constantes.md
@@ -4,7 +4,7 @@ Uma da principais funções de um programa é interagir com os usuários. Uma da
 formas de realizar essa interação é pela solicitação de informações e, a partir 
 dessas informações, implementar ações e apresentar respostas. Imagine um terminal 
 de caixa eletrônico que possibilite saques de apenas 100 reais. Pouco útil, já 
-que os clientes do banco que possuem saldo inferior a 100 reais não poderiam 
+que os clientes do banco que possuem saldo inferior à 100 reais não poderiam 
 utilizá-lo e aqueles que precisam de 500 reais, por exemplo, teriam de realizar 
 5 vezes a mesma operação. Haveria ainda aqueles que precisam de um valor não 
 múltiplo de 100. Ou sejá , o melhor é solicitar ao cliente o valor a ser sacado. 
