--- a/Capitulo_1/Introdução/1.9 Tipos de dados e conversoes de tipos.md
+++ b/Capitulo_1/Introdução/1.9 Tipos de dados e conversoes de tipos.md
@@ -18,3 +18,22 @@ cálculo é exibido ao lado de cada variável como um comentário (//).
   const e = a + 2 // e = 202 ???
   alert("e:" + e) // exibe o valor de uma variável
 </script>
+
+Nesse exemplo, temos uma varável do tipo string que recebe "20" (const a = "20").
+Ela é entendida como sendo do tipo string por estar delimitada por aspas. Contudo
+quando realizamos a dição, o valor de retorno é diferente do padrão, pos a 
+linguagem concatena (+) o texto com o número, algo semelhante ao que foi feito
+no Exemplo 1.2.
+
+Para resolver esse problema, precisamo converter o texto em número. Isso pode 
+ser feito em JavaScript, pelos métodos Number(), parseInt() e parseFloat().
+
+`const e = Number(a) + 2 // e = 22`
+
+Agora, a variável "a" é inicialmente convertida em número, e, após, ocorre a 
+soma do valor 2, gerando como resultado o valor 22.
+
+Caso seja necessário converter um número em string, para utilizar métodos como 
+os de preenchimento de espaços que estão disponíveis apenas para variáveis do 
+tipo string --- por exemplo, devemos utilizar o método toString(). Ele será 
+utilizado em alguns exemplos do livro.
